# Flipper-Zero-ESP32-Port

./: .gitignore  LICENSE  README.md  _winbuild_flash.bat  _winbuild_monitor.py  _winbuild_monitor_60s.py  _winbuild_monitor_long.py  _winbuild_step1.bat  _winbuild_step2.bat  _winbuild_step3.bat  build.sh  buildAndFlash_T-Embed.sh  buildAndFlash_waveshare_c6_1.9.sh  buildFap.sh  fam_config.py  interface.html  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32s3  test2_applications.c  test_applications.c  test_ported_apps.cmake
.github/workflows/: build.yml
applications/debug/unit_tests/: application.fam
applications/main/: application.fam
applications/main/archive/helpers/: archive_files.h
applications/main/archive/scenes/: archive_scene_browser.c
applications/main/archive/views/: archive_browser_view.c
applications/main/bad_ble/: application.fam  bad_ble_app.c  bad_ble_app_i.h
applications/main/bad_ble/scenes/: bad_ble_scene.c  bad_ble_scene.h  bad_ble_scene_list.c  bad_ble_scene_run.c  bad_ble_scene_settings.c  bad_ble_scene_start.c
applications/main/ble_spam/: ble_spam_app.c  ble_spam_app.h  ble_spam_hal.c  ble_walk_hal.c  ble_walk_hal.h
applications/main/ble_spam/scenes/: scene_config.h  (+1 more)
applications/main/infrared/: infrared_app.c  infrared_app.h  infrared_app_i.h  infrared_settings.h  infrared_tvbgone_codes.h
applications/main/momentum_app/: application.fam  momentum_app.c  momentum_app.h
applications/main/nfc/: application.fam
applications/main/nrf24/: application.fam  nrf24_app.c  nrf24_app.h  nrf24_hw.c  nrf24_hw.h
applications/main/subghz/: subghz.c  subghz_history.c  subghz_history.h  subghz_i.h  subghz_last_settings.c
applications/main/wifi_app/: evil_portal_html.c  evil_portal_html.h  wifi_app.c  wifi_app.h  wifi_evil_portal.c  wifi_hal.c  wifi_hal.h  wifi_passwords.c  wifi_passwords.h
applications/main/wlan_app/: wlan_evil_portal.c
applications/services/bt/: application.fam
applications/services/desktop/: desktop.c  desktop_settings.c  desktop_settings.h
applications/services/dolphin/: dolphin.c  dolphin.h
applications/services/expansion/: expansion.c
applications/services/loader/: loader.c  loader_menu.h
applications/services/storage/: storage.h  storage_external_api.c  storage_message.h  storage_processing.c
applications/settings/clock_settings/: application.fam  clock_settings.h
applications/settings/desktop_settings/: application.fam  desktop_settings_app.h
applications/settings/dolphin_passport/: passport.c
applications/settings/notification_settings/: notification_settings_app.c
applications/settings/storage_settings/: storage_settings.c
applications/system/js_app/: js_modules.c
applications_user/protopirate_fap_test/: application.fam
assets/ext_defaults/dolphin/: manifest.txt
components/assets/: assets_icons.c  assets_icons.h
components/ble_hid/: ble_hid.c
components/ble_serial/: ble_serial.c
components/btshim/: application.fam
components/desktop_settings/: CMakeLists.txt  desktop_settings_component.c
components/flipper_application/: CMakeLists.txt
components/flipper_application/flipper_application/: firmware_api.c  flipper_application.c
components/flipper_application/legacy_include/: flipper_application.h
components/flipper_protobuf/: gui.pb.h
components/furi/core/: thread.c
components/furi_hal/: CMakeLists.txt  furi_hal.c  furi_hal.h  furi_hal_bt.c  furi_hal_bt.h  furi_hal_crypto.c  furi_hal_crypto.h  furi_hal_display.c  furi_hal_infrared.c  furi_hal_nfc.c  furi_hal_nfc.h  furi_hal_power.c  furi_hal_rtc.c  furi_hal_rtc.h  furi_hal_sd.c  furi_hal_sd.h  furi_hal_speaker.c  furi_hal_speaker.h  furi_hal_usb_msc.c  furi_hal_usb_msc.h  furi_hal_version.c
components/furi_hal/boards/: board_lilygo_t_embed_cc1101.h  board_waveshare_c6_1.9.h
components/gui/: CMakeLists.txt  canvas.c  view_dispatcher.c
components/gui/modules/: file_browser.c  file_browser.h  menu.c  menu.h
components/infrared/: CMakeLists.txt
components/loader/: loader_applications.c  loader_menu.c  loader_menu.h
components/loader/apps/: about_app.c
components/mjs/: CMakeLists.txt
components/momentum/: CMakeLists.txt  asset_packs.c  asset_packs.h  asset_packs_i.h  desktop_keybinds.c  desktop_keybinds.h  icon_paths.c  icon_paths.h  momentum.h  momentum_settings.c  momentum_settings.h  rgb_backlight.h  rgb_backlight_shim.c
components/nfc/: nfc_poller.c
components/notification/: notification.c  notification_app.h
components/rpc/: rpc.c  rpc.h  rpc_gui.c
components/storage/: CMakeLists.txt  ext_defaults_embedded.h  storage.c  storage_ext_seed.c
components/subghz/: CMakeLists.txt
components/toolbox/: CMakeLists.txt
lib/infrared/signal/: infrared_brute_force.c  infrared_brute_force.h
lib/infrared/worker/: infrared_worker.c  infrared_worker.h
lib/momentum/: asset_packs.c  namespoof.c  settings.c  settings.h
lib/subghz/: receiver.c  subghz_setting.c  types.h
lib/subghz/blocks/: custom_btn.c  custom_btn.h
lib/subghz/protocols/: bmw_cas4.c  chrysler.c  fiat_marelli.c  fiat_spa.c  ford_v0.c  honda.c  honda.h  honda_static.c  honda_static.h  kia_v0.c  kia_v1.c  kia_v2.c  kia_v3_v4.c  kia_v5.c  kia_v6.c  kia_v7.c  kia_v7.h  mazda_siemens.c  mitsubishi_v0.c  porsche_cayenne.c  protocol_items.c  protocol_items.h  psa.c  scher_khan.c  sheriff_cfm.c  star_line.c  subaru.c  suzuki.c  vag.c
lib/toolbox/: colors.c
main/: CMakeLists.txt  app_main.c  idf_component.yml  main.lf
tools/: add_symbol.py  check_fap_symbols.py  fap_build.sh  fap_manifest.py  upload2flipper
tools/fam/: copy_ext_tree.py  embed_ext_defaults.py  export_l1_tv_bundled_dolphin.py  generate.py
(+127 files in other folders)
